--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,14 @@
 Package: catchstats
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Tools for manipulating nested catchment datasets
 Version: 0.1.0
 Author: Chris Walsh (author), Nick Bond (contributor)
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Maintainer: Nick Bond <n.bond@griffith.edu.au>
+Description: A suite of tools for tracing the links within a nested\n
+  catchment dataset. Nested implies that for each subcatchment\n
+  there is an associated field listing the next downstream or upstream\n
+  subcatchment. Together these can be used for various tracing tasks.
+License:  GPL-3
+Depends: R (>= 2.10)
 LazyData: TRUE
 RoxygenNote: 5.0.1
