--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,10 @@ export(aggRasterPoly)
 export(all_pairs)
 export(alldownstream)
 export(allupstream)
-export(awap_download)
 export(build_catch)
 export(build_catch_pxls)
 export(catch_stats)
+export(download_awap)
 export(extractRasterPoly)
 export(findnds)
 export(list_all_downstream)
