added new functions to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(build_catch_pxls)
 export(catch_stats)
 export(download_awap)
 export(extractRasterPoly)
+export(extractRasterPoly_cl)
 export(findnds)
 export(list_all_downstream)
 export(list_all_nds)
@@ -17,3 +18,4 @@ export(networkstats)
 export(pairReaches)
 export(riverreach)
 export(stack_awap)
+export(stack_awap_cl)
