--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Tools for manipulating nested catchment datasets
 Version: 0.1.0
 Author: Chris Walsh (author), Nick Bond (contributor)
-Maintainer: Nick Bond <n.bond@griffith.edu.au>
+Maintainer: Nick Bond <n.bond@latrobe.edu.au>
 Description: A suite of tools for tracing the links within a nested\n
   catchment dataset. Nested implies that for each subcatchment\n
   there is an associated field listing the next downstream or upstream\n
@@ -12,7 +12,8 @@ License: GPL-3
 Depends: R (>= 2.10)
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Imports: raster,
+Imports: parallel,
+    raster,
     rgdal,
     stringr,
     maptools,
