--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(findnds)
 export(list_all_downstream)
 export(list_all_nds)
 export(list_all_upstream)
+export(list_all_upstream_cl)
 export(networkstats)
 export(pairReaches)
 export(riverreach)
